--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -3,10 +3,20 @@
 
 <head>
   <title>Index Page</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <h1>The main page of the website</h1>
+  <h1 class="pretty">Pretty text</h1>
+
+  <div class="pretty">Another pretty section</div>
+
+  <img src="/website/images/4djIO4b.jpeg" width="400">
+
+  <button id="button">Click Me</button>
+
+  <script type="module" src="index.js"></script>
 </body>
 
 </html>
